<resources>
    <string name="app_name">diabeatit</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">DiaBEATit</string>
    <string name="nav_header_subtitle">Just beat it!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_setup">Setup</string>

    <string-array name="sensors">
        <item>None</item>
        <item>xDrip</item>
        <item>FakeSensor 3</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select">Select</string>
    <string name="timepoint">Timepoint:</string>
    <string name="notes">Notes</string>
    <string name="carbs">Carbs:</string>
    <string name="kcal">kcal</string>
    <string name="enter">Enter</string>
    <string name="battery_test_string">The battery of your fitness tracker \"<font color="#CC0000FF"><u>FitBit</u></font>\" is at <font color='#FF0000'>10%</font>.</string>
    <string name="sensor_test_string">Your blood glucose sensor \"<font color="#CC0000FF"><u>Dieter\'s Sensor</u></font>\" is not connected to your phone. Check it\'s battery level and your <font color="#CC0000FF"><u>Bluetooth settings</u></font>.</string>

    <!-- Alerts -->
    <string name="alert_label_info">info</string>
    <string name="alert_label_warning">warning</string>
    <string name="alert_label_urgent">urgent</string>
    <string name="alert_undo_text">Undo deletion?</string>
    <string name="alert_undo_action">Undo</string>
    <string name="title_activity_alert_history">History</string>

    <string name="title_activity_setup_insight">SetupInsight</string>
</resources>
