<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ManualInsulinEntryActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/timepoint"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:layout_margin="2dp"
                    android:textAlignment="textEnd"
                    android:labelFor="@id/edit_text_date_time"/>

                <TextView
                    android:id="@+id/edit_text_date_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:layout_margin="2dp"/>

                <Button
                    android:id="@+id/button_select_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select"
                    android:layout_margin="2dp"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="Bolus:"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:layout_margin="2dp"
                    android:textAlignment="textEnd"
                    android:labelFor="@id/edit_text_bolus"/>
                <EditText
                    android:id="@+id/edit_text_bolus"
                    android:inputType="numberDecimal"
                    android:layout_margin="2dp" />
                <TextView
                    android:text="U"
                    android:layout_margin="2dp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/notes"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:layout_margin="2dp"
                    android:textAlignment="textEnd"
                    android:labelFor="@id/edit_text_notes"
                    />
                <EditText
                    android:id="@+id/edit_text_notes"
                    android:layout_margin="2dp"
                    android:layout_span="2"
                    android:inputType="text" />
            </TableRow>
        </TableLayout>
        <Button
            android:id="@+id/button_enter"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>