<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ManualCarbsEntryActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textAlignment="textEnd"
                android:text="@string/carbs"
                android:labelFor="@id/edit_text_carbs"/>
            <EditText
                android:id="@+id/edit_text_carbs"
                android:layout_margin="2dp"
                android:inputType="numberDecimal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:labelFor="@id/edit_text_carbs"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:text="@string/kcal" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textAlignment="textEnd"
                android:text="@string/notes"
                android:labelFor="@id/edit_text_notes" />
            <EditText
                android:id="@+id/edit_text_notes"
                android:inputType="text"
                android:layout_margin="2dp"
                android:layout_span="2"
                />
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/btn_timestamp"
                android:layout_span="3"
                android:layout_height="72dp"
                android:layout_width="match_parent"
                android:text="DATE/TIME" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:labelFor="@id/iv_picture"
                android:text="Picture:" />
            <ImageView
                android:id="@+id/iv_picture"
                android:layout_height="200dp"
                android:layout_width="200dp"
                android:background="@color/cardview_shadow_start_color"
                />
            <Button
                android:id="@+id/btn_take_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select..." />
        </TableRow>
        <TableRow android:layout_weight="1.0" />
        <TableRow>
            <Button
                android:id="@+id/button_enter"
                android:layout_span="3"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:text="Enter"
                android:textColor="@color/cardview_light_background"
                android:background="@color/colorPrimary"
                />
        </TableRow>
    </TableLayout>
</RelativeLayout>